--- a/Agency360-Sender.yml
+++ b/Agency360-Sender.yml
@@ -1081,13 +1081,13 @@ Resources:
                   print(f"{FAIL} Start: Data to SQS")
                   daily_data = load_data(interval="DAILY")
 
-                  if(daily_data['ResponseMetadata']['HTTPStatusCode'] == 200):
+                  if(daily_data and daily_data != None and daily_data['ResponseMetadata']['HTTPStatusCode'] == 200):
 
                       print(f"{SUCCESS} Loaded Daily Data: {daily_data['MessageId']}")
 
                       monthly_data = load_data(interval="MONTHLY")
                       
-                      if(monthly_data['ResponseMetadata']['HTTPStatusCode'] == 200):
+                      if(monthly_data and monthly_data != None and monthly_data['ResponseMetadata']['HTTPStatusCode'] == 200):
                           print(f"{SUCCESS} Loaded Monthly Data: {monthly_data['MessageId']}")
 
                           print(f"{SUCCESS} Finish: Data to SQS")
