updated teh yml file

--- a/Agency360-Sender.yml
+++ b/Agency360-Sender.yml
@@ -23,10 +23,7 @@ Resources:
     Properties:
       FunctionName: agency360-sqs-metrics-daily
       Handler: index.lambda_handler
-      Role: 
-        Fn::GetAtt: 
-          - LambdaExecutionRole
-          - Arn
+      Role: !GetAtt LambdaExecutionRole.Arn
       Environment:
         Variables:
           REGION: !Ref Region
@@ -51,7 +48,7 @@ Resources:
           """ GLOABAL VARIABLES """
           ARN_SQS     = os.environ.get("SQS_QUEUE_ARN")
           REGION      = os.environ.get('REGION')#"ap-southeast-1"
-          BUCKET      = os.environ.get('ANALYTICS_BUCKET')#"ap-southeast-1"
+          BUCKET      = os.environ.get('BUCKET')#"ap-southeast-1"
 
 
           SUCCESS     = "🟢"  # Green dot
@@ -1108,11 +1105,12 @@ Resources:
               
               sqs         = SQSManager(queue_arn=ARN_SQS)
               data        = get_data(interval=interval)
+              if(data is None):
+                  return None
+              else:
+                  send_result = sqs.send_message(message=data)
+                  return send_result
               
-              send_result = sqs.send_message(message=data)
-
-              return send_result
-
           #Load current year's historical data
           def load_historical_data():
               sqs         = SQSManager(queue_arn=ARN_SQS)
@@ -1179,25 +1177,9 @@ Resources:
               
                   print("*"*14,"Disconnected","*"*13)
 
-          # Uncomment the line below for development only
-          #if __name__ == "__main__":
-          #    lambda_handler(event={'history':True})
-          #    #load_current_data()
-
       Runtime: python3.10
       Timeout: 60
       MemorySize: 128
-      Environment:
-        Variables:
-          REGION: 
-            Ref: Region
-          SQS_QUEUE_ARN: 
-            Ref: SqsQueueArn
-          ANALYTICS_ACCT: 
-            Ref: AnalyticsAccount
-          BUCKET:
-            Ref: S3Bucket
-
   LambdaExecutionRole:
     Type: 'AWS::IAM::Role'
     Properties:
@@ -1221,8 +1203,8 @@ Resources:
                   - s3:ListBucket
                   - s3:PutObject
                 Resource:
-                  - arn:aws:s3:::observability360-apac-sg-moe
-                  - arn:aws:s3:::observability360-apac-sg-moe/*
+                  - !Sub arn:aws:s3:::${S3Bucket}
+                  - !Sub arn:aws:s3:::${S3Bucket}/*
               - Effect: Allow
                 Action:
                   - secretsmanager:GetSecretValue
@@ -1322,11 +1304,8 @@ Resources:
       ScheduleExpression: cron(0 1 * * ? *)
       State: ENABLED
       Targets:
-        - Arn: 
-            Fn::GetAtt: 
-              - SQSMetricsLambdaFunction
-              - Arn
-          Id: SQSMetricsLambdaTarget
+      - Arn: !GetAtt SQSMetricsLambdaFunction.Arn
+        Id: SQSMetricsLambdaTarget
 
   LambdaInvokePermission:
     Type: 'AWS::Lambda::Permission'
@@ -1335,7 +1314,5 @@ Resources:
         Ref: SQSMetricsLambdaFunction
       Action: lambda:InvokeFunction
       Principal: events.amazonaws.com
-      SourceArn: 
-        Fn::GetAtt: 
-          - LambdaScheduleRule
-          - Arn
+      SourceArn: !GetAtt LambdaScheduleRule.Arn
+
