Final - Tested Cloudformation Template

--- a/Agency360-Sender.yml
+++ b/Agency360-Sender.yml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: '2010-09-09'
-Description: CloudFormation template for SQS metrics Lambda function
+Description: Agency360 - Sender Account with Lambda function that has access PUT access to the Analytics account's SQS and S3 to send the data. Eventbridge configred to run every day at 0100
 
 Parameters:
   Region:
@@ -14,7 +14,7 @@ Parameters:
     
   S3Bucket:
     Type: String
-    Default: 'agency360-data'
+    Default: 'agency360-data-bucket'
     Description: S3 bucket for storing data
 
 Resources:
@@ -1152,50 +1152,57 @@ Resources:
               return {"from":start_date.strftime('%d-%m-%Y'), "to":till_date.strftime('%d-%m-%Y'), "loaded":count}
 
           def process_data_status(has_daily, has_monthly, has_history, daily_data, monthly_data, history_data):
-              daily_status    = f"{SUCCESS if(has_daily) else ERROR} Daily Data - {daily_data['MessageId']}"
-              monthly_status  = f"{SUCCESS if(has_monthly) else ERROR} Monthly Data - {monthly_data['MessageId']}"
+            daily_status    = f"{ERROR} No Daily Data"
+            monthly_status  = f"{ERROR} No Monthly Data"
+            history_status  = f"{ERROR} No Historical Data"
+            
+            if(has_daily and daily_data is not None):
+                daily_status    = f"{SUCCESS} Daily Data - {daily_data['MessageId']}"
 
-              if(not has_history and len(history_data) == 0):
-                  history_status  = f"{FAIL} No Historical Data Loaded"
-              else:
-                  history_status  = f"{SUCCESS} {history_data['count']} Historical Data Loaded between {history_data['from']} - {history_data['to']}"
-              
-              return [daily_status, monthly_status, history_status]
+            if(has_monthly and monthly_data is not None):
+                monthly_status    = f"{SUCCESS} Monthly Data - {monthly_data['MessageId']}"
+
+            if(has_history and history_data is not None and len(history_data) == 0):
+                history_status  = f"{SUCCESS} {history_data['count']} Historical Data Loaded between {history_data['from']} - {history_data['to']}"
+            
+            return [daily_status, monthly_status, history_status]
 
           def lambda_handler(event=None, context=None):
-              
-              has_daily     = False
-              has_monthly   = False
-              has_history   = False
-              history_data  = {}
-              status        = []
+            
+            has_daily     = False
+            has_monthly   = False
+            has_history   = False
+            daily_data    = None
+            monthly_data  = None
+            history_data  = None
+            status        = []
 
-              if(test_connection()):
-                print("*"*15,"Connected","*"*15)
-                if (event is not None and isinstance(event, dict) and "history" in event and event['history'] == True):
-                    print("Loading Historical Data")
-                    history_data = load_historical_data()
-                    has_history = True
-                    print(f"{SUCCESS if(has_history) else ERROR} History Data")
-                else:
-                    print("Loading Daily & Monthly Data")
-                    daily_data = load_current_data(interval="DAILY")
+            if(test_connection()):
+            print("*"*15,"Connected","*"*15)
+            if (event is not None and isinstance(event, dict) and "history" in event and event['history'] == True):
+                print("Loading Historical Data")
+                history_data = load_historical_data()
+                has_history = True
+                print(f"{SUCCESS if(has_history) else ERROR} History Data")
+            else:
+                print("Loading Daily & Monthly Data")
+                daily_data = load_current_data(interval="DAILY")
 
-                    if(daily_data and daily_data != None and daily_data['ResponseMetadata']['HTTPStatusCode'] == 200):
-                        has_daily = True
-                        monthly_data = load_current_data(interval="MONTHLY")
-                        
-                        if(monthly_data and monthly_data != None and monthly_data['ResponseMetadata']['HTTPStatusCode'] == 200):
-                            has_monthly = True
+                if(daily_data and daily_data is not None and daily_data['ResponseMetadata']['HTTPStatusCode'] == 200):
+                    has_daily = True
+                    monthly_data = load_current_data(interval="MONTHLY")
                     
-                    status = process_data_status(has_daily, has_monthly, has_history, daily_data, monthly_data, history_data)
-                    print(status[0])
-                    print(status[1])
-                    print(status[2])
+                    if(monthly_data and monthly_data is not None and monthly_data['ResponseMetadata']['HTTPStatusCode'] == 200):
+                        has_monthly = True
+                
+                status = process_data_status(has_daily, has_monthly, has_history, daily_data, monthly_data, history_data)
+                print(status[0])
+                print(status[1])
+                print(status[2])
 
-                print("*"*14,"Disconnected","*"*13)
-                  
-                return status
+            print("*"*14,"Disconnected","*"*13)
+                
+            return status
 
       Runtime: python3.10
       Timeout: 300
